--- a/style.css
+++ b/style.css
@@ -75,8 +75,9 @@ img {
     nav {
       flex-direction: column;
       height: auto;
-      padding: 0px;
+      padding: 5px;
       text-align: center;
+      height: 1px;
     }
   
     nav ul {
@@ -85,7 +86,7 @@ img {
     }
   
     nav ul a {
-      padding: 0px 0;
+      padding: 5px 0;
       display: block;
     }
   }
