--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+}
 
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     width: 100%;
